# rust-hltb-bot

./: .gitignore  Cargo.toml  Dockerfile  README.MD  build.sh  docker-compose.yaml  page.html
src/: formatting.rs  lambda.rs  main.rs  model.rs  page_parsing.rs  telegram.rs  tests.rs
